--- a/scripts/deployment/pip/requirements/production.in
+++ b/scripts/deployment/pip/requirements/production.in
@@ -1,24 +1,24 @@
 # Django
-Django==1.11.29
+Django
 
 # Django filter
-django-filter==2.2.0
+django-filter
 
 # Django markup
-django-markup==1.4.1
+django-markup
 # Not direct requirements, but django-markup doesn't seem to pull them in
 bleach-whitelist
 bleach
 
 # Bootstrap
-django-bootstrap3==12.1.0
+django-bootstrap3
 
 # API framework
 python-dateutil
 requests
 
 # DRF
-djangorestframework==3.9.1
+djangorestframework
 # XML end-points
 djangorestframework-xml
 # CSV endpoints
@@ -31,7 +31,7 @@ django-rest-swagger
 django-tastypie
 
 # Registration for new users
-django-registration==2.5.2
+django-registration
 
 # SSL for Email
 django-smtp-ssl
@@ -100,11 +100,11 @@ geojson==2.5.0
 PyExcelerate==0.8.0
 
 # Google Storage Backend
-django-storages==1.9.1  # Latest version needs Django>=2.2
+django-storages
 google-cloud-storage
 
 # Docx writer
 python-docx
 
 # Django request token
-django_request_token==0.9.2
+django_request_token
