chore: Fix django registration loading
#4658 Upgrade to django 3.2

--- a/akvo/settings/10-base.conf
+++ b/akvo/settings/10-base.conf
@@ -25,7 +25,7 @@ INSTALLED_APPS = (
     'django.contrib.staticfiles',
     'akvo.codelists',
     'akvo.rsr',
-    'registration',
+    'django_registration',
     'sorl.thumbnail',
     'embed_video',
     'django_markup',
